# postit

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  commands.rs  main.rs  model.rs  storage.rs  ui.rs
