[package]
name = "postit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
directories = "5.0"
rand = "0.8"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
